# nlp_ood

./: .gitignore  README.md  docki.yaml  pyproject.toml  requirements.txt
doc/: README.md  sde_formulation.md
environment/: README.md  requirements.txt
project/: SDE_OOD.ipynb  config.yaml  config_amazon.yaml  config_debug.yaml  config_news.yaml  data.py  emb_amazon_corpus.ipynb  likelihood.py  ood.py  simple_mlp.py  train.py  utils.py
