[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nlp_ood"
version = "0.0.0"
authors = [
    {name = "Arturas Aleksandraus", email = "arturas@aleksandraus.se"},
    {name = "Nithesh Chandher Karthikeyan", email = "nithesh.chandher1997@gmail.com"},
]

description = "Project for Out-of-Distribution Detection in NLP"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ML", "PyTorch", "OOD", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools]
packages = ["project"]

